--- a/styles/style.css
+++ b/styles/style.css
@@ -798,6 +798,10 @@ main {
   margin-bottom: 7px;
 }
 
+.timeline-item a .timeline-item-title:hover {
+  color: var(--vegas-gold);
+}
+
 .timeline-list span {
   color: var(--vegas-gold);
   font-weight: var(--fw-400);
